# meta_skill

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  DELIVERY_MAP.md  PLAN_TO_MAKE_METASKILL_CLI.md  PLAN_TO_MAKE_METASKILL_CLI__CONDENSED.md  README.md  deny.toml  rust-toolchain.toml
.beads/: config.yaml  issues.jsonl
.cargo/: config.toml
.github/workflows/: bench.yml  ci.yml  e2e.yml  notify-acfs.yml  release.yml
benches/: search_perf.rs
docs/: TESTING_STRATEGY.md  config_system.md  prompt_injection_defense.md  resource_tree_usage.md
docs/examples/: ms.toml
migrations/: 002_add_fts.sql  013_add_skill_resource_manifest.sql  013_fix_fts.sql
scripts/: install.sh  test_install_e2e.sh  test_install_functions.sh
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  simulation.rs  templates.rs
src/agent_detection/: detectors.rs  mod.rs  service.rs
src/agent_mail/: mod.rs
src/antipatterns/: detection.rs  mod.rs  types.rs
src/auth/: device_code.rs
src/beads/: client.rs  concurrent_tests.rs  mock.rs  mod.rs  test_logger.rs  types.rs  version.rs  wal_safety_tests.rs
src/bundler/: blob.rs  github.rs  install.rs  local_safety.rs  manifest.rs  mod.rs  package.rs  registry.rs
src/cass/: brenner.rs  client.rs  mining.rs  mod.rs  quality.rs  refinement.rs  synthesis.rs  transformation.rs  uncertainty.rs
src/cli/: colors.rs  mod.rs  output.rs
src/cli/commands/: alias.rs  antipatterns.rs  backup.rs  bandit.rs  build.rs  bundle.rs  cm.rs  config.rs  conflicts.rs  contract.rs  cross_project.rs  dedup.rs  diff.rs  doctor.rs  edit.rs  embed.rs  evidence.rs  experiment.rs  favorite.rs  feedback.rs  fmt.rs  graph.rs  hide.rs  import.rs  inbox.rs  index.rs  init.rs  lint.rs  list.rs  load.rs  machine.rs  mcp.rs  meta.rs  migrate.rs  mod.rs  outcome.rs  personalize.rs  pre_commit.rs  preferences.rs  prune.rs  (+17 more)
src/cli/formatters/: search_results.rs  skill_card.rs  suggestion.rs
src/cm/: client.rs  mod.rs
src/context/: capture.rs  collector.rs  detector.rs  fingerprint.rs  mod.rs  scoring.rs
src/core/: dedup.rs  dependencies.rs  disclosure.rs  layering.rs  mod.rs  overlay.rs  pack_contracts.rs  packing.rs  recovery.rs  registry.rs  requirements.rs  resolution.rs  resolution_cache.rs  safety.rs  skill.rs  slicing.rs  spec_lens.rs  spec_migration.rs  validation.rs
src/dedup/: mod.rs
src/error/: codes.rs  mod.rs
src/graph/: bv.rs  skills.rs
src/import/: classifiers.rs  formatting.rs  generator.rs  mod.rs  parser.rs  types.rs
src/lint/: config.rs  diagnostic.rs  engine.rs  mod.rs  rule.rs
src/lint/rules/: mod.rs  quality.rs  reference.rs  security.rs  structural.rs
src/meta_skills/: manager.rs  parser.rs  registry.rs  types.rs
src/output/: builders.rs  detection.rs  errors.rs  fallback.rs  mod.rs  plain_format.rs  progress.rs  rich_output.rs  safe.rs  test_utils.rs  theme.rs
src/quality/: mod.rs  skill.rs  ubs.rs
src/search/: cache.rs  context.rs  embeddings.rs  embeddings_local.rs  filters.rs  hybrid.rs  mod.rs  tantivy.rs  tantivy_index.rs
src/security/: acip.rs  command_safety.rs  mod.rs  path_policy.rs  secret_scanner.rs
src/storage/: git.rs  migrations.rs  mod.rs  sqlite.rs  sqlite_compat.rs  tombstone.rs  tx.rs
src/suggestions/: cooldown.rs  mod.rs  tracking.rs
src/suggestions/bandit/: bandit.rs  context.rs  contextual.rs  features.rs  mod.rs  types.rs
src/sync/: config.rs  engine.rs  jfp.rs  machine.rs  mod.rs  ru.rs  state.rs
src/test_utils/: arbitrary.rs  fixtures.rs  logging.rs  mock_server.rs  mod.rs
src/testing/: definition.rs  runner.rs  steps.rs
src/tui/: browse.rs  build_tui.rs  mod.rs
src/update/: mod.rs
src/updater/: download.rs  mod.rs
src/utils/: format.rs  fs.rs  git.rs
tests/: cli.rs
tests/common/: rich_output_helpers.rs
tests/e2e/: auto_load_workflow.rs  bundle_workflow.rs  cass_workflow.rs  cross_project_workflow.rs  fixture.rs  fresh_install.rs  graph_workflow.rs  index_workflow.rs  layer_conflict.rs  list_workflow.rs  main.rs  mcp_workflow.rs  prune_workflow.rs  rich_output_workflow.rs  search_workflow.rs  security_workflow.rs  skill_creation.rs  skill_discovery.rs
tests/integration/: agent_compat_tests.rs  agent_detection_tests.rs  auto_load_tests.rs  beads_real_tests.rs  cli_tests.rs  composition_tests.rs  context_detection_tests.rs  db_state_tests.rs  error_handling_tests.rs  fixture.rs  fixture_tests.rs  main.rs  migration_tests.rs  mod.rs  more_cli_tests.rs  security_tests.rs  ubs_staged_tests.rs  workflow_tests.rs
tests/properties/: main.rs  roundtrip_tests.rs  safety_tests.rs
tests/snapshots/: cli_output.rs
tests/snapshots/snapshots/: snapshot_tests__snapshots__cli_output__search_human.snap  snapshot_tests__snapshots__cli_output__search_robot_json.snap  snapshot_tests__snapshots__cli_output__show_human.snap  snapshot_tests__snapshots__diagnostics__doctor_output.snap
tests/unit/: cli_command_parse_tests.rs  config_tests.rs  graph_tests.rs  hash_embed_tests.rs  main.rs  meta_skills_tests.rs  output_detection_tests.rs  perf_target_tests.rs  quality_tests.rs  skill_spec_tests.rs  theme_tests.rs
