[package]
name = "ms"
version = "0.1.3"
edition = "2024"
resolver = "2"
authors = ["Jeffrey Emanuel <jeff@jeffreyemanuel.dev>"]
description = "Meta Skill - Mine CASS sessions to generate Claude Code skills"
license = "MIT"
repository = "https://github.com/Dicklesworthstone/meta_skill"
homepage = "https://github.com/Dicklesworthstone/meta_skill"
keywords = ["cli", "skills", "ai", "claude", "cass"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.89"
exclude = [
    ".github/",
    ".beads/",
    "scripts/",
    "*.md",
    "!README.md",
]

[[bin]]
name = "ms"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5.60", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
clap_complete = "4.6.5"

# Async runtime
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros", "fs", "io-util", "time", "signal"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
toml = "1.0.7"
toon_rust = { package = "tru", git = "https://github.com/Dicklesworthstone/toon_rust" }

# Database — migrated from rusqlite per project-wide policy
# ("NEVER use rusqlite — frankensqlite ONLY", meta_skill#106).
# `fsqlite` is the public facade crate published on crates.io.
fsqlite = { version = "0.1.8", features = ["fts5"] }
fsqlite-types = "0.1.8"
fsqlite-error = "0.1.8"
# (The `asupersync = "=0.3.1"` / `franken-decision = "=0.3.1"` transitive pins
# that the 0.1.7 family required are no longer needed: frankensqlite 0.1.8
# (#108) stops calling the test-internals-gated asupersync constructor, so it
# builds cleanly against asupersync 0.3.2 — the chain is realigned.)

# Search
tantivy = "0.26.1"

# Git (use vendored-openssl for musl cross-compilation)
git2 = { version = "0.21.0", features = ["vendored-openssl"] }

# Terminal output
colored = "3.0.0"
indicatif = "0.18.3"
console = "0.16.3"
rich_rust = { version = "0.2.0", features = ["full"] }

# TUI
ratatui = "0.30.1"
crossterm = "0.29.0"

# High-performance text processing
regex = "1.12.2"
memchr = "2.8.1"
unicode-normalization = "0.1.25"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls"] }
urlencoding = "2.1.3"

# Semantic search / embeddings
half = "2.7.1"
wide = "1.1.1"
ring = "0.17.14"

# Parallelism
rayon = "1.11.0"
crossbeam-channel = "0.5.15"
parking_lot = "0.12.5"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "ansi", "json"] }

# Authentication
keyring = "3.6.3"
atty = "0.2.14"
open = "5.3.5"

# Utilities
chrono = { version = "0.4.45", default-features = false, features = ["std", "clock", "serde"] }
uuid = { version = "1.23.2", features = ["v4"] }
dirs = "6.0.0"
walkdir = "2.5.0"
glob = "0.3.3"
sha2 = "0.11"
hex = "0.4.3"
base64 = "0.22.1"
itertools = "0.14.0"
textwrap = "0.16.2"
semver = { version = "1.0.28", features = ["serde"] }
fs2 = "0.4.3"
hostname = "0.4.2"
libc = "0.2.180"
tempfile = "3.27.0"
rand = "0.10"
rand_distr = "0.6"
which = "8.0.2"
humantime-serde = "1.1.1"
lru = "0.17"

[build-dependencies]
vergen-gix = { version = "1.0.9", features = ["build", "cargo", "rustc"] }

[dev-dependencies]
tempfile = "3.27.0"
assert_cmd = "2.2.2"
predicates = "3.1.3"
insta = { version = "1.46.0", features = ["json", "yaml"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.9.0"
proptest-derive = "0.8.0"
httpmock = "0.8.2"
# rusqlite is retained as a dev-only dependency for the integration/e2e
# fixtures in `tests/` that read meta_skill's on-disk SQLite files using the
# classic C-SQLite implementation. All production storage goes through
# `fsqlite` per the project-wide "NEVER use rusqlite — frankensqlite ONLY"
# policy (see meta_skill#106).
rusqlite = { version = "0.39.0", features = ["bundled", "modern_sqlite"] }

[features]
default = []

[[bench]]
name = "search_perf"
harness = false

[[bench]]
name = "rich_output_perf"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

# Profiling profile: release optimizations with debug symbols for flamegraph/perf
# Usage: cargo build --profile=profiling
# Then: cargo flamegraph --profile=profiling --bin ms -- search "query"
[profile.profiling]
inherits = "release"
debug = true
strip = false

[lints.rust]
# Changed from "forbid" to "deny" to allow test modules to use unsafe for
# env::set_var/remove_var (required by Rust 2024 edition). Tests use #[allow(unsafe_code)].
unsafe_code = "deny"

[lints.clippy]
# The pedantic and nursery groups stay enabled (aspirational), but CI runs
# `cargo clippy --all-targets -- -D warnings`, which promotes every warning to a
# hard error. The lints allowed below are stylistic pedantic/nursery checks that
# do not reflect real defects in this CLI codebase (doc-comment formatting, cast
# precision on already-validated values, format-arg inlining, "use Self", etc.).
# Allowing them keeps the genuinely useful lints (correctness, suspicious,
# complexity, perf) enforced while preventing nightly lint-set drift from turning
# CI red without any code change. This mirrors the sibling beads_rust convention.
# Group lines use priority -1 so the per-lint `allow`s (priority 0) win.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# --- Documentation / naming (cosmetic) ---
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
struct_field_names = "allow"
missing_fields_in_debug = "allow"
literal_string_with_formatting_args = "allow"

# --- Formatting / style preferences ---
uninlined_format_args = "allow"
format_push_string = "allow"
manual_string_new = "allow"
if_not_else = "allow"
single_match_else = "allow"
items_after_statements = "allow"
too_many_lines = "allow"
needless_continue = "allow"
match_same_arms = "allow"
print_literal = "allow"

# --- "Self" / API-shape preferences ---
use_self = "allow"
unused_self = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
should_implement_trait = "allow"
new_without_default = "allow"
ref_option = "allow"
single_option_map = "allow"

# --- Numeric casts on already-validated values ---
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
unreadable_literal = "allow"
suboptimal_flops = "allow"
float_cmp = "allow"

# --- Pass-by-value / borrow preferences ---
needless_pass_by_value = "allow"
needless_pass_by_ref_mut = "allow"
trivially_copy_pass_by_ref = "allow"

# --- Bool-heavy structs / signatures (domain config types) ---
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"

# --- Stylistic nursery/pedantic that don't reflect real defects ---
option_if_let_else = "allow"
map_unwrap_or = "allow"
unwrap_or_default = "allow"
unnecessary_wraps = "allow"
missing_const_for_fn = "allow"
redundant_clone = "allow"
redundant_closure_for_method_calls = "allow"
significant_drop_tightening = "allow"
used_underscore_binding = "allow"
useless_let_if_seq = "allow"
self_only_used_in_recursion = "allow"
implicit_hasher = "allow"
branches_sharing_code = "allow"
elidable_lifetime_names = "allow"
case_sensitive_file_extension_comparisons = "allow"
large_enum_variant = "allow"
type_complexity = "allow"
or_fun_call = "allow"
arc_with_non_send_sync = "allow"
path_ends_with_ext = "allow"
collection_is_never_read = "allow"

# --- clippy::all style / complexity / minor-perf lints ---
# These are subjective style or micro-optimization checks (not correctness or
# suspicious-code lints) that fire pervasively across this large CLI codebase.
# They are silenced so `-D warnings` stays focused on real defects; the
# correctness, suspicious, and significant-perf lints remain enforced.
needless_raw_string_hashes = "allow"
assigning_clones = "allow"
manual_let_else = "allow"
field_reassign_with_default = "allow"
needless_collect = "allow"
unnecessary_debug_formatting = "allow"
single_char_pattern = "allow"
unnecessary_sort_by = "allow"
needless_borrows_for_generic_args = "allow"
unnecessary_literal_bound = "allow"
useless_format = "allow"
manual_assert = "allow"
match_wildcard_for_single_variants = "allow"
manual_checked_ops = "allow"
default_trait_access = "allow"
derivable_impls = "allow"
collapsible_if = "allow"
collapsible_else_if = "allow"
collapsible_str_replace = "allow"
assertions_on_constants = "allow"
stable_sort_primitive = "allow"
ptr_arg = "allow"
unnecessary_unwrap = "allow"
unnecessary_map_or = "allow"
trait_duplication_in_bounds = "allow"
redundant_closure = "allow"
manual_range_contains = "allow"
iter_kv_map = "allow"
if_same_then_else = "allow"
format_collect = "allow"
double_ended_iterator_last = "allow"
clone_on_copy = "allow"
wildcard_in_or_patterns = "allow"
wildcard_imports = "allow"
unnested_or_patterns = "allow"
trivial_regex = "allow"
too_many_arguments = "allow"
single_match = "allow"
semicolon_if_nothing_returned = "allow"
question_mark = "allow"
print_with_newline = "allow"
path_buf_push_overwrite = "allow"
module_inception = "allow"
match_like_matches_macro = "allow"
manual_contains = "allow"
len_zero = "allow"
items_after_test_module = "allow"
implicit_saturating_sub = "allow"
filter_next = "allow"
extend_with_drain = "allow"
double_must_use = "allow"
comparison_chain = "allow"
# nursery: flags use of std file-locking (try_lock_exclusive/unlock, stable since
# 1.89) while the declared MSRV is 1.85. The MSRV job uses `cargo check`, not
# clippy, so this does not gate clippy; see src/storage/tx.rs.
incompatible_msrv = "allow"

# --- lints that only fire in the test/integration/e2e targets ---
# `assert_eq!(x, true)` reads clearly in assertions; `_foo = Variant` bindings are
# deliberate compile-checks; `3.14` is arbitrary JSON test-fixture data (not PI);
# `#[ignore]` on fixture-generator tests needs no reason string.
bool_assert_comparison = "allow"
no_effect_underscore_binding = "allow"
approx_constant = "allow"
collapsible_match = "allow"
ignore_without_reason = "allow"
